keycloak/service.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: keycloak
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: jboss/keycloak
          #          args: ["start-dev"]
          ports:
            - name: http
              containerPort: 8080
#          readinessProbe:
#            httpGet:
#              path: /realms/master
#              port: 8080
#          volumeMounts:
#            - mountPath: C:/Users/NXS/Downloads/keycloak-legacy-18.0.0/keycloak-18.0.0/standalone/data
#              name: keycloakdata
#    volumes:
#      - name: keycloakdata
#        persistentVolumeClaim:
#          claimName: keycloak-pv-claim
#---
#apiVersion: v1
#kind: PersistentVolumeClaim
#metadata:
#  name: keycloak-pv-claim
#spec:
#  accessModes:
#    - ReadWriteOnce
#  resources:
#    requests:
#      storage: 5Mi
